# crawler

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build_deploy.yaml
crawler/: crawl.py
crawler/argparsing/: argparsing.py
crawler/crawler_logging/: app_logging.py  logging_config.py
crawler/crawling/: utilities.py
crawler/logging/: app_logging.py
